# typed-interpolation

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  README.md  typed-interpolation.cabal
exe/: Main.hs
src/: Interpolation.hs
