name:               typed-interpolation
version:            0.1.0.0
synopsis:           Type-level interpolations in various forms
description:        Generates functions from type-level interpolation of Symbols
homepage:           https://github.com/dmjio/typed-interpolation
license:            BSD3
license-file:       LICENSE
author:             David Johnson
maintainer:         djohnson.m@gmail.com
copyright:          (c) David Johnson
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
cabal-version:      >= 1.10

executable demo
  main-is:
    Main.hs
  hs-source-dirs:
    exe
  build-depends:
    base < 5,
    typed-interpolation
  default-language:
    Haskell2010

library
  exposed-modules:
    Interpolation
  build-depends:
    base < 5
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  default-language:
    Haskell2010
